# tcgscanner-ml

./: .gitignore  README.md  pyproject.toml
card_seg/: config.py
card_seg/data_pipeline/: flow.py
card_seg/data_pipeline/setup/: upload_raw_data.py
card_seg/data_pipeline/tasks/: extract.py  load.py  transform.py
card_seg/schemas/: model_runs.json  training_epochs.json
card_seg/src/: config.py  requirements.txt
card_seg/src/data_pipeline/: datalake_setup.py  etl_flow.py  flow.py  transform.py
card_seg/src/training_pipeline/: training_job.py
card_seg/training_pipeline/: Dockerfile  flow.py  local_test_job.py  training_job.py
card_seg/training_pipeline/setup/: setup_bigquery.py
card_seg/traning_pipeline/: flow.py
common/: config.py
common/cloud_computing/: pod_fs.py
common/data_pipeline/: extract.py  load.py
common/helper/: gcs_io.py  zip_helpers.py
common/setup/: bq_setup.py  kaggle_to_gcs.py
common/tasks/: extract.py  load.py  load_ml.py  transform_helper.py
common/training_pipeline/: extract.py  load.py  pod_control.py
config/: project_config.py
data_platform/: config.py  pyproject.toml
data_platform/archive/: args.yaml
data_platform/etl/: evaluate.py  load.py  transform.py
data_platform/flows/: training_flow.py
data_platform/setup/: upload_raw_data.py
ed_check/: config.py  requirements.txt
ed_check/data_pipeline/: flow.py  transform.py
ed_check/schemas/: model_runs.json  training_epochs.json
ed_check/src/: config.py
ed_check/training_pipeline/: evaluate.py  flow.py  load.py  train.py
(+30 files in other folders)
