[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data-platform"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-storage==3.11.0",
    "google-cloud-bigquery==3.42.1",
    "kagglehub",
    "prefect",
    "python-dotenv",
    "numpy==1.26.4",
    "ultralytics==8.4.67",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["card_seg", "ed_check", "common", "config"]